# MBI

./: .cproject  .project  MBI-Dokumentacja końcowa.docx  README.md  setup.bat  setup.sh
code/: .main.cpp.swp  CMakeLists.txt  main.cpp
code/algorithm/include/: BLOSUMAlgorithm.h  BLOSUMAlgorithmImpl.h
code/tests/: CMakeLists.txt
code/tests/include/: BLOSUMAlgorithmTest.h  TestCaseRepresentation.h  Tests.h  UnitTests.h
code/tests/src/: BLOSUMAlgorithmTest.cpp  TestCaseRepresentation.cpp  main.cpp
code/view/: AppResources.qrc  CMakeLists.txt
code/view/include/: infoview.h  mainwindow.h  resultwindow.h  seqinputview.h  tableabstract.h  tableplainview.h  tableview.h
code/view/src/: infoview.cpp  main.cpp  mainwindow.cpp  resultwindow.cpp  seqinputview.cpp  tableabstract.cpp  tableplainview.cpp  tableview.cpp
code/view/ui/: infoview.ui  mainwindow.ui  resultwindow.ui  seqinputview.ui  tableview.ui
doc/: .~lock.BLOSUM_matrices.ppt#  BLOSUM_matrices.ppt
example/: BigTest.mbi  README.txt  albumin_first_block.mbi  albumin_fourth_block.mbi  albumin_second_block.mbi  albumin_third_block.mbi  hello.mbi  keratin_first_block.mbi  keratin_fourth_block.mbi  keratin_second_block.mbi  keratin_third_block.mbi  lysine_first_block.mbi  lysine_second_block.mbi  lysine_third_block.mbi  protamine_first_block.mbi  protamine_second_block.mbi  test1.mbi  test2.mbi  test3.mbi
number_of_sequences_const/: sep_11.mbi  sep_12.mbi  sep_17.mbi  sep_21.mbi  sep_24.mbi  sep_25.mbi  sep_27.mbi  sep_28.mbi  sep_5.mbi  sep_6.mbi  sep_7.mbi  sep_8.mbi  sep_9.mbi
number_of_sequences_tests/separate_by_10/: test13.mbi  test14.mbi  test19.mbi  test2.mbi  test21.mbi  test26.mbi  test28.mbi  test29.mbi  test3.mbi  test30.mbi  test31.mbi  test35.mbi  test8.mbi
number_of_sequences_tests/separate_by_14/: test10.mbi  test17.mbi  test2.mbi  test20.mbi  test26.mbi  test30.mbi  test34.mbi  test36.mbi  test7.mbi  test8.mbi
performance_tests/: separated_by_11.mbi  separated_by_12.mbi  separated_by_15.mbi  separated_by_18.mbi  separated_by_19.mbi  separated_by_23.mbi  separated_by_5.mbi  separated_by_6.mbi  separated_by_8.mbi  separated_by_9.mbi
tests/: MBI.xls  separator.sh  testData.txt
tests/number_of_sequences_const/: sep_10.mbi  sep_13.mbi  sep_14.mbi  sep_15.mbi  sep_16.mbi  sep_18.mbi  sep_19.mbi  sep_20.mbi  sep_22.mbi  sep_23.mbi  sep_26.mbi  sep_4.mbi
tests/number_of_sequences_tests/separate_by_10/: test10.mbi  test11.mbi  test12.mbi  test15.mbi  test16.mbi  test17.mbi  test18.mbi  test20.mbi  test22.mbi  test23.mbi  test24.mbi  test25.mbi  test27.mbi  test32.mbi  test33.mbi  test34.mbi  test36.mbi  test4.mbi  test5.mbi  test6.mbi  test7.mbi  test9.mbi
tests/number_of_sequences_tests/separate_by_14/: test11.mbi  test12.mbi  test13.mbi  test14.mbi  test15.mbi  test16.mbi  test18.mbi  test19.mbi  test21.mbi  test22.mbi  test23.mbi  test24.mbi  test25.mbi  test27.mbi  test28.mbi  test29.mbi  test3.mbi  test31.mbi  test32.mbi  test33.mbi  test35.mbi  test4.mbi  test5.mbi  test6.mbi  test9.mbi
tests/performance_tests/: separated_by_10.mbi  separated_by_13.mbi  separated_by_14.mbi  separated_by_16.mbi  separated_by_17.mbi  separated_by_20.mbi  separated_by_21.mbi  separated_by_22.mbi  separated_by_24.mbi  separated_by_25.mbi  separated_by_4.mbi  separated_by_7.mbi
